tests/CompilersBenchmark/SemanticErrors/declarationDefinitionMismatch2.c
// Declaration of f
int f(int a, int b);

// definition of f with wrong parameter type
int f(int a, int b){
    return b;
}

int main(){
}
